--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "html-webpack-plugin": "^2.29.0",
+    "lodash": "^4.17.4",
+    "node-uuid": "^1.4.8",
     "path": "^0.12.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "redux": "^3.7.1",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
