Add middleware chain

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.1",
+    "redux-logger": "^3.0.6",
+    "redux-promise": "^0.5.3",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   },
