--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "^3.7.1",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   },
