--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "html-webpack-plugin": "^2.29.0",
     "lodash": "^4.17.4",
     "node-uuid": "^1.4.8",
+    "normalizr": "^3.2.3",
     "path": "^0.12.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
